--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "sls webpack serve"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "serverless": "^1.11.0",
+    "serverless-webpack": "^1.0.0-rc.4",
+    "source-map-support": "^0.4.14",
+    "webpack": "^2.3.3"
+  }
 }
