--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "sls webpack serve"
+    "start": "sls webpack serve",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
