--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.3.3",
+    "babel-preset-es2015": "^6.24.1",
     "serverless": "^1.11.0",
     "serverless-webpack": "^1.0.0-rc.4",
     "source-map-support": "^0.4.14",
     "webpack": "^2.3.3"
-  }
+  },
+  "dependencies": {}
 }
