--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "sls webpack serve",
-    "build": "webpack"
+    "deploy": "sls deploy"
   },
   "author": "",
   "license": "ISC",
