--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "serverless": "^1.11.0",
     "serverless-webpack": "^1.0.0-rc.4",
     "source-map-support": "^0.4.14",
-    "webpack": "^2.3.3"
+    "webpack": "^2.3.3",
+    "webpack-node-externals": "^1.5.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "aws-sdk": "^2.41.0"
+  }
 }
