--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-  "presets": ["env", "es2015"]
+  "plugins": ["transform-runtime"],
+  "presets": [
+    ["env", {
+      "targets": {
+        "node": 6.10
+      },
+      "modules": "commonjs"
+    }]
+  ]
 }
