--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.3.3",
-    "babel-preset-es2015": "^6.24.1",
     "serverless": "^1.11.0",
+    "serverless-dynamodb-local": "^0.2.21",
     "serverless-webpack": "^1.0.0-rc.4",
-    "source-map-support": "^0.4.14",
     "webpack": "^2.3.3",
     "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
-    "aws-sdk": "^2.41.0"
+    "aws-sdk": "^2.41.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-runtime": "^6.23.0",
+    "source-map-support": "^0.4.14"
   }
 }
