--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "sls webpack serve",
+    "lint": "eslint .",
     "deploy": "sls deploy"
   },
   "author": "",
@@ -14,6 +15,13 @@
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.3.3",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "serverless": "^1.11.0",
     "serverless-dynamodb-local": "^0.2.21",
     "serverless-webpack": "^1.0.0-rc.4",
