--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,4 +1,6 @@
-extends: standard
+parser: babel-eslint
+extends:
+  - standard
 rules:
   import/first: 0
   comma-dangle: [error, always-multiline]
