--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,11 @@
 {
-  "plugins": ["transform-runtime"],
   "presets": [
     ["env", {
       "targets": {
         "node": 6.10
       },
       "modules": "commonjs"
-    }]
+    }],
+    "flow"
   ]
 }
